Fixed the "numbers" are of the quiz on mobile

--- a/view/css/steam_style.css
+++ b/view/css/steam_style.css
@@ -167,6 +167,8 @@ body{
 .area-pergunta{
     border-radius: 20px;
     border:solid black 1px;
+    margin-right: 15%;
+    margin-left: 15%;
 }
 
 .numbers{
@@ -233,10 +235,20 @@ img{
     background-color: #a7a7a7;
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
     .area-pergunta{
-        margin-right: 15%;
-        margin-left: 15%;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .imagem-pergunta{
+        margin-left:15px;
+        margin-right:15px;
+        margin-top: 10px;
+        font-size: 25px;
+    }
+    .respostas{
+        font-size: 18px;
+        text-indent: 0px;
     }
 }
 
